--- a/app/home/home.html
+++ b/app/home/home.html
@@ -34,7 +34,9 @@
         </div>
     </div>
 
-    <div class="totals">
+    <div class="totals" ng-controller="TotalsCtrl as vm">
+
+        <!-- <button ng-click="vm.test(1)">TEST</button> -->
 
         <h3>Summary</h3>
 
@@ -48,10 +50,12 @@
         </div>
 
         <div class="totalsAndStats">
-            <div>Recorded Minutes - 121</div>
-            <div>Unspent Passed Time - 444</div>
-            <div>Planned Minutes - 3443</div>
-            <div>Time Left - 34534</div>
+            <div>Recorded Minutes - {{vm.data.recordedMins}}</div>
+            <!-- time that has passed but hasn't been accounted for -->
+            <div>Unspent Passed Time - {{vm.data.unspentPastMins}}</div>
+            <div>Planned Minutes - {{vm.data.plannedMins}}</div>
+            <!-- minutes left in the day minus minutes planned for during the rest of the day -->
+            <div>Minutes Left - {{vm.data.timeLeft}}</div>
         </div>
 
         <h4>Overall</h4>
@@ -67,14 +71,12 @@
             <div>Recorded Minutes - 121</div>
             <div>Unspent Passed Time - 444</div>
             <div>Planned Minutes - 3443</div>
-            <div>Time Left - 34534</div>
         </div>
 
     </div>
 
     <script src="../bower_components/angular/angular.js"></script>
     <script src="home.js"></script>
-
 </body>
 
 
