--- a/app/home/home.html
+++ b/app/home/home.html
@@ -68,9 +68,9 @@
         </div>
 
         <div class="totalsAndStats">
-            <div>Recorded Minutes - 121</div>
-            <div>Unspent Passed Time - 444</div>
-            <div>Planned Minutes - 3443</div>
+            <div>Recorded Minutes - {{vm.data.historyTotals.recordedTotal}}</div>
+            <div>Unspent Passed Time - {{vm.data.historyTotals.unusedPastTime}}</div>
+            <div>Planned Minutes - {{vm.data.historyTotals.plannedTotal}}</div>
         </div>
 
     </div>
