--- a/app/home/home.html
+++ b/app/home/home.html
@@ -17,31 +17,46 @@
         <div id="bannerDate">{{vm.date | date:"fullDate"}}</div>
         <div id="bannerClock">{{vm.date | date:"mediumTime"}}</div>
 
-        <div id="modalParent" ng-controller="ModalCtrl as vm">
 
-            <div class="modalBG" ng-show="vm.recordActive || vm.plansActive">
-                <modal-form/>
-            </div>
+    </div>
 
-            <div>
-                <button ng-click="vm.btnClick('records')" class="tab recorded">
+    <div class="totals" ng-controller="TotalsCtrl as vm" ng-init="vm.productivity = false">
+
+        <div class="modalBG" ng-show="vm.formActive">
+            <modal-form />
+        </div>
+
+        <div class="modalBG" ng-show="vm.listActive">
+            <modal-list />
+        </div>
+
+        <div id="totalsHeader">
+            <div class="records">
+                <div>Records</div>
+                <button ng-click="vm.btnClick('recordsAdd')">
                     <i class="far fa-plus-square"></i>
                 </button>
-                <button ng-click="vm.btnClick('plans')" class="tab toDo">
+                <button ng-click="vm.btnClick('recordsList')">
+                    <i class="fas fa-clipboard-list"></i>
+                </button>
+            </div>
+
+            <div class="productivity">
+                <h4>Today</h4>
+                <div ng-show="vm.data.productivity.recorded.productive === 0">Productivity - 0%</div>
+                <div ng-show="vm.data.productivity.recorded.productive > 0">Productivity - {{vm.data.productivity.recorded.percentage}}%</div>
+            </div>
+
+            <div class="plans">
+                <div>Plans</div>
+                <button ng-click="vm.btnClick('plansAdd')">
+                    <i class="far fa-plus-square"></i>
+                </button>
+                <button ng-click="vm.btnClick('plansList')">
                     <i class="fas fa-clipboard-list"></i>
                 </button>
             </div>
         </div>
-    </div>
-
-    <div class="totals" ng-controller="TotalsCtrl as vm">
-
-        <!-- <button ng-click="vm.test(1)">TEST</button> -->
-
-        <h3>Summary</h3>
-
-        <h4>Today</h4>
-
         <div class="graphParent">
             <button class="switchGraphBtn">
                 <</button>
@@ -50,12 +65,32 @@
         </div>
 
         <div class="totalsAndStats">
-            <div>Recorded Minutes - {{vm.data.recordedMins}}</div>
-            <!-- time that has passed but hasn't been accounted for -->
-            <div>Unspent Passed Time - {{vm.data.unspentPastMins}}</div>
-            <div>Planned Minutes - {{vm.data.plannedMins}}</div>
-            <!-- minutes left in the day minus minutes planned for during the rest of the day -->
-            <div>Minutes Left - {{vm.data.timeLeft}}</div>
+
+            <div class="totalSection subTotal">
+                <div class="totalLabel">Daily Minutes</div>
+                <div class="totalValue">-1440</div>
+            </div>
+
+            <div class="totalSection subtraction">
+                <div class="totalLabel">Recorded Minutes</div>
+                <div class="totalValue">-{{vm.data.recordedMins}}</div>
+            </div>
+
+            <div class="totalSection subtraction">
+                <div class="totalLabel">Unspent Passed Time</div>
+                <div class="totalValue">-{{vm.data.unspentPastMins}}</div>
+            </div>
+
+            <div class="totalSection subtraction">
+                <div class="totalLabel">Planned Minutes</div>
+                <div class="totalValue">-{{vm.data.plannedMins}}</div>
+            </div>
+
+            <div class="totalSection subTotal">
+                <div class="totalLabel">Minutes Left</div>
+                <div class="totalValue">{{vm.data.timeLeft}}</div>
+            </div>
+
         </div>
 
         <h4>Overall</h4>
@@ -70,9 +105,7 @@
         <div class="totalsAndStats">
             <div>Recorded Minutes - {{vm.data.historyTotals.recordedTotal}}</div>
             <div>Unspent Passed Time - {{vm.data.historyTotals.unusedPastTime}}</div>
-            <div>Planned Minutes - {{vm.data.historyTotals.plannedTotal}}</div>
         </div>
-
     </div>
 
     <script src="../bower_components/angular/angular.js"></script>
