--- a/app/home/modalList.html
+++ b/app/home/modalList.html
@@ -1,1 +1,28 @@
-<div>Modal Form</div>
+<div class="listItemContainer">
+    <div class="listItemSection" ng-repeat="item in vm.currentList">
+
+        <div class="listItemParent">
+            <div class="listItemLabel">Name: </div>
+            <div class="listItemValue">{{item.name}}</div>
+        </div>
+
+        <div class="listItemParent">
+            <div class="listItemLabel">Cost: </div>
+            <div class="listItemValue">{{item.cost}}</div>
+        </div>
+
+
+        <div class="listItemParent">
+            <div class="listItemLabel">Category:</div>
+            <div class="listItemValue">{{item.category}}</div>
+        </div>
+
+        <div class="listItemParent">
+            <div class="listItemLabel">Productivity:</div>
+            <div class="listItemValue">{{item.productivity}}</div>
+        </div>
+
+    </div>
+    <button class="exitBtn" ng-click="vm.modalExit()">X</button>
+
+</div>
