--- a/app/home/modalList.html
+++ b/app/home/modalList.html
@@ -28,7 +28,7 @@
                     <i class="fas fa-edit"></i>
                 </button>
     
-                <button class="listItemBtn">
+                <button ng-click="vm.deleteItem({name: item.name, cost: item.cost, category: item.category, productivity: item.productivity})" class="listItemBtn">
                     <i class="fas fa-trash-alt"></i>
                 </button>
             </div>
